--- a/bower.json
+++ b/bower.json
@@ -4,6 +4,7 @@
   "dependencies": {
     "jquery": "~2.1.1",
     "modernizr": "~2.8.1",
-    "susy": "~2.2.5"
+    "susy": "~2.2.5",
+    "scrollmagic": "~2.0.5"
   }
 }
