--- a/bower.json
+++ b/bower.json
@@ -5,6 +5,8 @@
     "jquery": "~2.1.1",
     "modernizr": "~2.8.1",
     "susy": "~2.2.5",
-    "scrollmagic": "~2.0.5"
+    "scrollmagic": "~2.0.5",
+    "prism": "~1.0.0",
+    "underscore": "~1.8.3"
   }
 }
