--- a/bower.json
+++ b/bower.json
@@ -7,6 +7,7 @@
     "susy": "~2.2.5",
     "scrollmagic": "~2.0.5",
     "prism": "~1.0.0",
-    "underscore": "~1.8.3"
+    "underscore": "~1.8.3",
+    "handlebars": "~3.0.3"
   }
 }
