Import element files into the built html

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "gulp-concat": "^2.6.0",
     "gulp-csso": "^0.2.6",
     "gulp-declare": "^0.3.0",
+    "gulp-file-include": "^0.13.7",
     "gulp-handlebars": "^4.0.0",
     "gulp-if": "^1.2.1",
     "gulp-imagemin": "^2.0.0",
