--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "gulp-cache": "^0.2.2",
     "gulp-concat": "^2.6.0",
     "gulp-csso": "^0.2.6",
+    "gulp-debug": "^2.1.0",
     "gulp-declare": "^0.3.0",
     "gulp-file-include": "^0.13.7",
     "gulp-handlebars": "^4.0.0",
